Fixes filter alignment

--- a/themes/icore-open/_index.scss
+++ b/themes/icore-open/_index.scss
@@ -415,6 +415,7 @@ and spacing sets */
   $filter-icon-mask: icons.$filter,
   $filter-icon-width: 1rem,
   $filter-icon-height: 1rem,
+  $filter-intro-justify-content: space-between,
   $filter-button-font-size: 0,
   $filter-close-icon-mask: icons.$close,
   $filter-button-background-color: transparent,
